# HacklyticsWinner

./: LICENSE  README.md  backend.sh  pyproject.toml
backend/: disease.py  matching.py  preprocess_ingredients.py  streamlit.py
backend/api/: endpoint.py  main.py  vector.py
backend/data/: disease_ingredient.csv  ingr_to_food.csv  ingredients_metadata.csv
frontend/foodmedecine/: package-lock.json  package.json
frontend/foodmedecine/public/: index.html
frontend/foodmedecine/src/: App.js  cities.js  index.css  index.js
frontend/foodmedecine/src/Components/: Cards.js  Ingredients.js  Search.js
frontend/foodmedecine/src/pages/: Home.js  Suggestion.js
